# clang

lib/AST/: ASTContext.cpp  ASTImporter.cpp  ASTStructure.cpp  CMakeLists.txt  CommentSema.cpp  DeclTemplate.cpp  ExternalASTSource.cpp  ODRHash.cpp
lib/Analysis/: CloneDetection.cpp
lib/Basic/: VirtualFileSystem.cpp
lib/Frontend/: CompilerInstance.cpp  FrontendActions.cpp
lib/Headers/: mm_malloc.h
lib/Lex/: PPDirectives.cpp  PPMacroExpansion.cpp  Pragma.cpp  Preprocessor.cpp.autosave
lib/Parse/: ParseDecl.cpp  ParseExpr.cpp  Parser.cpp
lib/Sema/: AnalysisBasedWarnings.cpp  MultiplexExternalSemaSource.cpp  Sema.cpp  SemaCast.cpp  SemaChecking.cpp  SemaCoroutine.cpp  SemaDecl.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaObjCProperty.cpp  SemaStmtAsm.cpp  SemaType.cpp
lib/Serialization/: ASTReader.cpp  ASTReaderDecl.cpp  ASTWriter.cpp  ASTWriterDecl.cpp
test/Analysis/: analyzer-checker-config.c
test/Modules/: ast-file-size-limit.cpp  delay-emit-check.cpp
test/PCH/: delay-PCH-emit-check.cpp
test/SemaCXX/: cxx11-odr-use-crash-on-invalid.cpp
test/VFS/: parse-errors.c
tools/: CMakeLists.txt
tools/clang-import-test/: clang-import-test.cpp
tools/clone-finder/: CMakeLists.txt  CloneFinder.cpp
unittests/: CMakeLists.txt
unittests/AST/: ASTStructureTest.cpp  CHashTest.cpp  CMakeLists.txt  PostOrderASTVisitor.cpp
unittests/Frontend/: CompilerInstanceTest.cpp
unittests/Sema/: ExternalSemaSourceTest.cpp
unittests/Serialization/: CMakeLists.txt  FileSizeTest.cpp  GenerationCounterTest.cpp
unittests/Tooling/: CMakeLists.txt  (+1 more)
(+72 files in other folders)
